--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1 id="playText">Want To Play?/h1>
+        <h1 id="playText">Want To Play?</h1>
             <button id="restartBtn">Restart</button>
             <div id="gameboard">
                 <div class="box" id="0"></div>
@@ -25,6 +25,6 @@
         </h1>
     </div>
     
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
