--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
             </div>
         </h1>
     </div>
+
+    <table id="table">
+        <thead>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Date Added</th>
+            <th>Delete</th>
+            <th>Edit</th>
+        </thead>
+        <tbody></tbody>
+    </table>
     
     <script src="js/main.js"></script>
 </body>
