--- a/index.html
+++ b/index.html
@@ -8,34 +8,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1 id="playText">Want To Play?</h1>
-            <button id="restartBtn">Restart</button>
-            <div id="gameboard">
-                <div class="box" id="0"></div>
-                <div class="box" id="1"></div>
-                <div class="box" id="2"></div>
-                <div class="box" id="3"></div>
-                <div class="box" id="4"></div>
-                <div class="box" id="5"></div>
-                <div class="box" id="6"></div>
-                <div class="box" id="7"></div>
-                <div class="box" id="8"></div>
-            </div>
-        </h1>
-    </div>
+    <main>
 
-    <table id="table">
-        <thead>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Date Added</th>
-            <th>Delete</th>
-            <th>Edit</th>
-        </thead>
-        <tbody></tbody>
-    </table>
-    
-    <script src="js/main.js"></script>
+        <nav>
+            <ul>
+                <li><a href="#"><h1>Play</h1></a></li>
+                <li><a href="table.html"><h1>Table</h1></a></li>
+            </ul>
+        </nav>
+
+        <!-- <section id="playData">
+            <h1 id="playText">Play</h1>
+            <h1 id="dataText">Data</h1>
+        </section> -->
+        
+        <div class="container">
+                <button id="restartBtn">Restart</button>
+                <div id="gameboard">
+                    <div class="box" id="0"></div>
+                    <div class="box" id="1"></div>
+                    <div class="box" id="2"></div>
+                    <div class="box" id="3"></div>
+                    <div class="box" id="4"></div>
+                    <div class="box" id="5"></div>
+                    <div class="box" id="6"></div>
+                    <div class="box" id="7"></div>
+                    <div class="box" id="8"></div>
+                </div>
+            </h1>
+        </div>
+
+        <script src="js/main.js"></script>
 </body>
 </html>
